@@ -1,10 +1,6 @@
 package com.example.lab4secondtry;
 
-import com.example.lab4secondtry.Domain.ActiveUser;
-import com.example.lab4secondtry.Domain.Friendship;
-import com.example.lab4secondtry.Domain.User;
-import com.example.lab4secondtry.Domain.ValidationException;
-import com.example.lab4secondtry.Repository.DbRepo.ActiveRepoFriendship;
+import com.example.lab4secondtry.Domain.*;
 import com.example.lab4secondtry.Service.FriendshipService;
 import com.example.lab4secondtry.Service.UserService;
 import com.example.lab4secondtry.Utils.MessageAlert;
@@ -19,68 +15,83 @@ import javafx.scene.control.TableView;
 import javafx.scene.control.cell.PropertyValueFactory;
 
 import java.net.URL;
-import java.time.LocalDateTime;
 import java.util.*;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 public class RequestsController implements Initializable {
     UserService userService = new UserService();
     FriendshipService friendshipService = new FriendshipService();
-    ObservableList<User> model = FXCollections.observableArrayList();
+    ObservableList<Wrapper> modelFinal = FXCollections.observableArrayList();
 
     @FXML
-    TableView<User> tableView;
+    TableView<Wrapper> tableView;
     @FXML
-    TableColumn<User, String> tableColumnFirstName;
+    TableColumn<Wrapper, String> tableColumnFirstName;
     @FXML
-    TableColumn<User, String> tableColumnLastName;
+    TableColumn<Wrapper, String> tableColumnLastName;
     @FXML
-    TableColumn<Friendship, String> tableColumnDate;
+    TableColumn<Wrapper, Date> tableColumnDate;
 
+    /**
+     * Initialize override of request-view scene
+     * @param location
+     * The location used to resolve relative paths for the root object, or
+     * {@code null} if the location is not known.
+     *
+     * @param resources
+     * The resources used to localize the root object, or {@code null} if
+     * the root object was not localized.
+     */
     @Override
     public void initialize(URL location, ResourceBundle resources) {
+
         tableColumnFirstName.prefWidthProperty().bind(tableView.widthProperty().divide(3));
         tableColumnLastName.prefWidthProperty().bind(tableView.widthProperty().divide(3));
         tableColumnDate.prefWidthProperty().bind(tableView.widthProperty().divide(3));
-        tableColumnFirstName.setCellValueFactory(new PropertyValueFactory<User, String>("firstName"));
-        tableColumnLastName.setCellValueFactory(new PropertyValueFactory<User, String>("lastName"));
-        tableColumnDate.setCellValueFactory(new PropertyValueFactory<Friendship, String>("date"));
+        tableColumnFirstName.setCellValueFactory(new PropertyValueFactory<>("firstName"));
+        tableColumnLastName.setCellValueFactory(new PropertyValueFactory<>("lastName"));
+        tableColumnDate.setCellValueFactory(new PropertyValueFactory<>("date"));
 
         initModel();
 
-        tableView.setItems(model);
+        tableView.setItems(modelFinal);
     }
 
+    /**
+     * Model initializer
+     */
     private void initModel() {
         Iterable<Friendship> messages = friendshipService.getAll();
         List<Friendship> friendships = StreamSupport.stream(messages.spliterator(), false)
-                .collect(Collectors.toList());
-        List<User> pendingFriends = new ArrayList<>();
-        List<Date> pendingDates = new ArrayList<>();
+                .toList();
+        List<Wrapper> pending = new ArrayList<>();
 
         User activeUser = ActiveUser.getInstance().getUser();
 
         for (Friendship f : friendships) {
 
-            Iterable<User> messages1 = userService.getAll();
-            List<User> users = StreamSupport.stream(messages1.spliterator(), false)
-                    .collect(Collectors.toList());
-
             if (f.getSecondUserId() == activeUser.getId() && f.getStatus().equals("unaccepted") ) {
                 Optional<User> optionalUser = userService.findById(f.getFirstUserId());
-                pendingFriends.add(optionalUser.get());
-                pendingDates.add(f.getDate());
+                if (optionalUser.isPresent()) {
+                    Wrapper wrapper = new Wrapper(optionalUser.get().getFirstName(),
+                            optionalUser.get().getLastName(), f.getDate());
+                    pending.add(wrapper);
+                }
             }
         }
-        model.setAll(pendingFriends);
+        modelFinal.setAll(pending);
     }
 
+    /**
+     * Accept button clicked
+     * @param event event
+     */
     public void acceptClicked(ActionEvent event) {
         try {
-            ObservableList<User> selectedUser = tableView.getSelectionModel().getSelectedItems();
+            ObservableList<Wrapper> selectedUser = tableView.getSelectionModel().getSelectedItems();
             if (!selectedUser.isEmpty()) {
-                User user = selectedUser.get(0);
+                Wrapper wrapper = selectedUser.get(0);
+                User user = new User(wrapper.getFirstName(), wrapper.getLastName());
                 User userInRepo = userService.find(user);
 
                 Friendship friendship = new Friendship(userInRepo.getId(),
@@ -103,11 +114,16 @@ public class RequestsController implements Initializable {
         MessageAlert.showMessage(null, Alert.AlertType.INFORMATION, "Accept", "Friend request successfully added!");
     }
 
+    /**
+     * Delete button clicked
+     * @param event event
+     */
     public void deleteClicked(ActionEvent event) {
         try {
-            ObservableList<User> selectedUser = tableView.getSelectionModel().getSelectedItems();
+            ObservableList<Wrapper> selectedUser = tableView.getSelectionModel().getSelectedItems();
             if (!selectedUser.isEmpty()) {
-                User user = selectedUser.get(0);
+                Wrapper wrapper = selectedUser.get(0);
+                User user = new User(wrapper.getFirstName(), wrapper.getLastName());
                 User userInRepo = userService.find(user);
 
                 Friendship friendship = new Friendship(userInRepo.getId(),
